[gd_scene load_steps=10 format=3 uid="uid://bhu2cfvo5qya1"]

[ext_resource type="Script" path="res://player/player.gd" id="1_n7sqs"]
[ext_resource type="Texture2D" uid="uid://dteyh3t3y2djh" path="res://icon.svg" id="2_k77o2"]
[ext_resource type="PackedScene" uid="uid://dj3a7f4hediaq" path="res://player/cursor.tscn" id="2_wxpvy"]
[ext_resource type="PackedScene" uid="uid://bvnw7uiv8ynbw" path="res://player/PlayerCamera.tscn" id="3_uq8j8"]
[ext_resource type="Texture2D" uid="uid://c3oyrg7dq5p78" path="res://player/bubble.png" id="4_ca56c"]
[ext_resource type="PackedScene" uid="uid://dy4ks821tkfro" path="res://player/death_screen.tscn" id="4_f7mkn"]
[ext_resource type="Texture2D" uid="uid://cti7pikaotqon" path="res://player/greystar.png" id="6_jut04"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3v5m"]
size = Vector2(128, 128)

[sub_resource type="Gradient" id="Gradient_nh1bg"]
offsets = PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1)
colors = PackedColorArray(0.180392, 0.843137, 0.282353, 1, 0.12549, 0.701961, 0.952941, 1, 0.964706, 0.619608, 0.0352941, 1, 1, 0.458824, 0.658824, 1, 0.784314, 0.2, 0.45098, 1, 1, 1, 1, 1)
metadata/_snap_enabled = true

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_n7sqs")
allow_restarts = true

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_k77o2")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_l3v5m")

[node name="Camera" parent="." instance=ExtResource("3_uq8j8")]

[node name="RestartButtonController" type="Node2D" parent="Camera"]
position = Vector2(-1104, -512)
scale = Vector2(2, 2)

[node name="RestartButton" type="Button" parent="Camera/RestartButtonController"]
offset_right = 192.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="PositionController" type="Node2D" parent="Camera"]
position = Vector2(-320, -224)

[node name="DeathScreen" parent="Camera/PositionController" instance=ExtResource("4_f7mkn")]
metadata/_edit_use_anchors_ = true

[node name="DamageTimer" type="Timer" parent="."]
autostart = true

[node name="ResetSpriteTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="BubbleParticle" type="CPUParticles2D" parent="."]
amount = 5
explosiveness = 0.58
texture = ExtResource("4_ca56c")
emission_shape = 1
emission_sphere_radius = 70.0
spread = 93.91
gravity = Vector2(0, -200)

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DashParticleTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="DashParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 15
texture = ExtResource("6_jut04")
emission_shape = 1
emission_sphere_radius = 50.0
gravity = Vector2(0, 0)
scale_amount_min = 2.0
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_nh1bg")

[node name="Cursor" parent="." instance=ExtResource("2_wxpvy")]

[connection signal="pressed" from="Camera/RestartButtonController/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="ResetSpriteTimer" to="." method="_on_reset_sprite_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashParticleTimer" to="." method="_on_dash_particle_timer_timeout"]
